# cpp-11-2023-06-19

./: CMakeLists.txt  README.md
_exercises/auto-declarations-ex/: auto_declarations_ex.cpp
_exercises/find-null-ex/: find_null.cpp
any/: tests_any.cpp
auto-decltype/: auto_decltype.cpp
class-features/: class_features.cpp
constexpr/: constexpr.cpp
ctad/: tests_ctad.cpp
dataset/: dataset_tests.cpp
enums/: enums.cpp
ifs/: gadget.hpp  tests_ifs.cpp
lambdas/: lambdas.cpp
move-semantics/: move_semantics_1.cpp  move_semantics_2.cpp  move_semantics_3.cpp  perfect_forwarding.cpp
nullptr/: nullptr.cpp
pi/: main.cpp
range-based-for/: range_based_for.cpp
smart-pointers/: smart_pointers.cpp
string-literals/: string_literals.cpp
threads/: CMakeLists.txt  main.cpp
tuples/: tuples.cpp
uniform-initialization/: uniform_initialization.cpp
variadic-templates/: variadic_templates.cpp
variant/: tests_variants.cpp  visitors_ex.cpp
